Add covid section

--- a/index.html
+++ b/index.html
@@ -657,17 +657,68 @@
                 <h2 class="section-heading text-uppercase mb-0">Frequently Asked Questions</h2>
                 <h3 class="section-subheading-normal">คำถามที่พบบ่อย</h3>
             </div>
-            <!-- Q1-->
             <div class="accordion" id="accordionFAQ">
+                <!-- Q0-->
+                <div class="card toTheTop">
+                    <div class="card-header" id="headingCovid">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#faq1" aria-expanded="true" aria-controls="service-xray">
+                                ทางคลินิกมีแนวทางการควบคุมและป้องกันกาพแพร่ระบาดของเชื้อ COVID-19 หรือไม่
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="faq1" class="collapse show" aria-labelledby="headingCovid" data-parent="#accordionFAQ">
+                        <div class="card-body">
+                            <p>เรามีแนวทางการควบคุมและป้องกันการติดเชื้อ COVID-19 ดังนี้
+                            </p>
+                            <ol>
+                                <li><b>การนัดหมายเพื่อเข้ารับการรักษาทางทันตกรรม</b></li>
+                                <ul>
+                                    <li>จัดที่นั่งรอให้มีระยะห่าง 1-2 เมตร</li>
+                                    <li>มีการวัดอุณหภูมิร่างกายทุกคนที่เข้ามาในคลินิก</li>
+                                    <li>มีระบบการคัดกรอง-ซักประวัติการเดินทาง การสัมผัสผู้ที่เสี่ยง และอาการต่าง ๆ ของโรค
+                                    </li>
+                                    <li>จัดให้มีสถานที่ล้างมือด้วยสบู่-น้ำ และแอลกอฮอล์เจลในคลินิก</li>
+                                    <li>ผู้ที่มานั่งรอทุกท่านให้สวมมาสก์ตลอดเวลาที่อยู่ในคลินิก</li>
+                                    <li>เก็บบันทึกภาพของผู้ที่เข้ามาภายในคลินิกทุกช่วงเวลา (สามารถติดตามกลุ่มเสี่ยงได้)
+                                    </li>
+                                </ul>
+                                <li><b>แนวทางการป้องกันการแพร่เชื้อในคลินิก</b></li>
+                                <ul>
+                                    <li>เพิ่มพัดลมระบายอากาศ</li>
+                                    <li>เพิ่มเครื่องฟอกอากาศทุกห้อง</li>
+                                    <li>ให้คนไข้ทุกท่านบ้วนปากก่อนการรักษาเพื่อลดปริมาณเชื้อที่ออกมากับละอองฝอย (ลดปริมาณเชื้อที่ออกมากับละอองฝอยในขณะให้การรักษาทางทันตกรรม 70-95%)</li>
+                                    <li>การใช้แผ่นยางกันน้ำลายในขณะกรอฟัน (ลดเชื้อที่ฟุ้งกระจายออกมากับละอองฝอยได้ 70-98%)
+                                    </li>
+                                    <li>การใช้เครื่องดูดแรงดันสูง และ เครื่องดูดละอองฝอยนอกปาก (External Oral Suction) ใกล้กับจุดกำเนิดละอองฝอย (ลดปริมาณละอองฝอยได้ 90%) โดยมีใช้ทุกห้องทำฟัน</li>
+                                    <li>ทันตแพทย์/ผู้ช่วยทันตแพทย์ ให้สวมเสื้อกาวน์ มาสก์ แว่นตาป้องกัน เฟซชีลด์ ถุงมือ
+                                    </li>
+                                    <li>เครื่องมือ/อุปกรณ์ที่ใช้กับคนไข้แต่ละรายเป็นชนิดที่ใช้ครั้งเดียวทิ้ง เช่น เข็มฉีดยา กระดาษปิดหน้าอก หลอดดูดน้ำลาย ถุงมือ</li>
+                                    <li>เครื่องมือต่าง ๆ ผ่านการทำให้ปลอดเชื้อหรือฆ่าเชื้อที่มีประสิทธิภาพสูง</li>
+                                    <li>เช็ดทำความสะอาดด้วยน้ำยาฆ่าเชื้อ เช่น เก้าอี้ทำฟัน อ่างบ้วนปาก ถาดวางเครื่องมือ ด้ามปรับไฟ พื้นห้องทำฟัน โดยทำก่อนให้การรักษาคนไข้แต่ละราย</li>
+                                    <li>ใช้ถุงพลาสติก (Plastic Wrap) คลุมพื้นผิวที่เกิดการปนเปื้อนในระหว่างการรักษาคนไข้
+                                    </li>
+                                </ul>
+                                <li><b>การดูแลสิ่งแวดล้อมภายในคลินิก</b></li>
+                                <ul>
+                                    <li>เช็ดทำความสะอาด (ด้วยน้ำยาฆ่าเชื้อ) พื้นผิวสัมผัสต่าง ๆ เช่น โต๊ะ เก้าอี้ เคาน์เตอร์ ลูกบิดประตู ให้ทำความสะอาดทุก 30-60 นาที</li>
+                                    <li>พื้นห้อง ทำความสะอาดทุก 30-60 นาที</li>
+                                    <li>ห้องน้ำและอ่างล้างมือ เช็ดทำความสะอาดทุก 30-60 นาที</li>
+                                </ul>
+                            </ol>
+                        </div>
+                    </div>
+                </div>
+                <!-- Q1-->
                 <div class="card toTheTop">
                     <div class="card-header" id="headingOne">
                         <h5 class="mb-0">
-                            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#faq1" aria-expanded="true" aria-controls="service-xray">
+                            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#faq1" aria-expanded="false" aria-controls="service-xray">
                                 ทำไมต้องพบทันตแพทย์เพื่อตรวจฟันปีละ 2 ครั้ง?
                             </button>
                         </h5>
                     </div>
-                    <div id="faq1" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionFAQ">
+                    <div id="faq1" class="collapse" aria-labelledby="headingOne" data-parent="#accordionFAQ">
                         <div class="card-body">
                             <p>ทันตแพทย์จะตรวจเช็คสุขภาพช่องปากและฟัน <b>เพื่อเฝ้าระวังโรค
                                     และจะได้ทำการรักษาหรือแก้ปัญหาได้แต่เนิ่นๆ</b> เพราะโรคในช่องปากหลายๆ โรคไม่มีอาการหรือมีอาการน้อยมาก กว่าจะรู้ตัว ก็มักจะเป็นมากจนทำให้การรักษายุ่งยาก เจ็บตัว เสียเวลา และเสียค่ารักษามากขึ้นด้วย สำหรับบางคน ถ้าทันตแพทย์พิจารณาแล้วว่ามาตรวจทุก
@@ -714,7 +765,8 @@
                                 </li>
                                 <li>
                                     <p><b>ดูแลให้ลูกรับประทานอาหารที่มีประโยชน์อย่างถูกสุขลักษณะ</b> ควรให้ลูกกินผักและผลไม้ที่มีเส้นใย เพื่อช่วยขัดฟันตามธรรมชาติด้วย และระวังเรื่องการรับประทานขนมและน้ำหวาน ที่ทำจากแป้งและน้ำตาล โดยอาจให้กินเป็นเวลา ในมื้ออาหาร
-                                        เสร็จแล้วก็อย่าลืมแปรงฟันทุกครั้งด้วย สำหรับขนมหวานที่เหนียวติดฟัน เช่น ลูกอม ช็อกโกแลต ก็ไม่ควรให้ลูกรับประทานเป็นของกินเล่น</p>
+                                        เสร็จแล้วก็อย่าลืมแปรงฟันทุกครั้งด้วย สำหรับขนมหวานที่เหนียวติดฟัน เช่น ลูกอม ช็อกโกแลต ก็ไม่ควรให้ลูกรับประทานเป็นของกินเล่น
+                                    </p>
                                 </li>
                                 <li>
                                     <p>ให้ลูกรับประทานฟลูออไรด์ โดยปรึกษาทันตแพทย์ว่าปริมาณที่เหมาะสมกับวัยและปริมาณฟลูออไรด์ในน้ำที่ดื่มควรเป็นเท่าไร และควรพาลูกไปพบทันตแพทย์ เพื่อ<b>เคลือบฟลูออไรด์ทุก
@@ -814,7 +866,8 @@
                     </div>
                     <div id="faq7" class="collapse" aria-labelledby="headingSeven" data-parent="#accordionFAQ">
                         <div class="card-body">
-                            <p>เมื่อประสาทฟันถูกกระทบกระเทือนจะเกิดการอักเสบเป็นหนอง หรือประสาทฟันตายในที่สุด ทำให้รู้สึกปวดฟันมาก <b>การรักษาคลองรากฟันเป็นการกำจัดเนื้อเยื่อที่อักเสบหรือเป็นหนองออก
+                            <p>เมื่อประสาทฟันถูกกระทบกระเทือนจะเกิดการอักเสบเป็นหนอง หรือประสาทฟันตายในที่สุด ทำให้รู้สึกปวดฟันมาก
+                                <b>การรักษาคลองรากฟันเป็นการกำจัดเนื้อเยื่อที่อักเสบหรือเป็นหนองออก
                                     ทำให้อาการเจ็บปวดหายไปแล้วยังมีฟันไว้ใช้งานตามปกติต่อไปได้</b> การปล่อยฟันที่เป็นโรคทิ้งไว้นานๆ ทำให้กระดูกที่รองรับฟันอักเสบ ละลายตัวไปอาจจะไม่สามารถเก็บรักษาฟันไว้ได้ เมื่อถอนฟันไปแล้วกระดูกบริเวณซี่นั้นจะยุบลงไป
                                 ทำให้ใส่ฟันเทียมได้ไม่สวยเหมือนฟันธรรมชาติ ประสิทธิภาพการเคี้ยวก็ลดน้อยลง นอกจากนี้ค่าใช้จ่ายในการใส่ฟันอาจจะสูงกว่าการรักษารากฟัน
                             </p>
@@ -872,7 +925,8 @@
                         <div class="card-body">
                             <p>สามารถใส่ฟันเทียมได้ 3 วิธี คือ</p>
                             <ol>
-                                <li><b>ทันตกรรมรากเทียม</b> คือการใส่ฟันเทียมถาวรบนรากเทียม ซึ่งจะมีความแข็งแรง รูปร่างลักษณะ ความสวยงาม ความรู้สึก และการใช้งาน ใกล้เคียงฟันธรรมชาติมากที่สุด</li>
+                                <li><b>ทันตกรรมรากเทียม</b> คือการใส่ฟันเทียมถาวรบนรากเทียม ซึ่งจะมีความแข็งแรง รูปร่างลักษณะ ความสวยงาม ความรู้สึก และการใช้งาน ใกล้เคียงฟันธรรมชาติมากที่สุด
+                                </li>
                                 <li><b>สะพานฟันติดแน่น</b> ทำโดยกรอฟันข้างเคียงที่ติดกับช่องว่างที่เกิดขึ้น แล้วทำฟันเทียมติดแน่นสวมทับเป็นฟัน 3 ซี่ ซึ่งจะให้ความแข็งแรง สวยงามได้ดี</li>
                                 <li><b>ฟันเทียมชนิดถอดได้</b> (ฐานพลาสติกหรือฐานโลหะ) ทำโดยต้องมีการวางตะขอกับฟันที่เหลืออยู่ เพื่อยึดฟันเทียมไว้ ซึ่งอาจก่อให้เกิดความรำคาญ นอกจากนี้ความสวยงามและประสิทธิภาพการเคี้ยวอาหารยังต่ำกว่าฟันธรรมชาติมาก แต่มีราคาต่ำกว่าการใส่ฟันเทียมชนิดอื่นๆ
                                 </li>
@@ -902,10 +956,10 @@
                     </div>
                     <h5>ศูนย์ทันตกรรม พีดีซี สาขางามวงศ์วาน</h5>
                     <p class="text-muted">บริษัท โปรเฟสชั่นแนล เดนตัล เซ็นเตอร์ จำกัด<br> 425 อาคารพาณิชย์ ตรงข้ามเดอะมอลล์
-                        <br> ถ.งามวงศ์วาน ต.บางเขน อ.เมือง จ.นนทบุรี 11000<br> โทร : (66) 2952 7475-6, (668) 6345 6312, (668) 7676 2326
+                        <br> ถ.งามวงศ์วาน ต.บางเขน อ.เมือง จ.นนทบุรี 11000<br> โทร : (66) 2952 7475-6, (668) 1684 9616, (668) 6327 2887
                         <br> โทรสาร : (66) 2952 7476<br> เวลาทำการ : จ.-อา. 10.00-20.00 น.<br></p>
                     <h5>PDC Dental Center, Ngamwongwan Branch</h5>
-                    <p class="text-muted">Professional Dental Center Company Limited<br> 425 Ngamwongwan Road,<br> Bangkaen, Muang District, Nonthaburi 11000<br> Tel : (66) 2952 7475-6, (668) 6345 6312, (668) 7676 2326
+                    <p class="text-muted">Professional Dental Center Company Limited<br> 425 Ngamwongwan Road,<br> Bangkaen, Muang District, Nonthaburi 11000<br> Tel : (66) 2952 7475-6, (668) 1684 9616, (668) 6327 2887
                         <br> Fax : (66) 2952 7476
                         <br> Office Hour : Mon.-Sun. 10.00 am.-8.00 pm.<br></p>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3873.704478130872!2d100.54021371298018!3d13.856769390279556!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e29cbb1795ad77%3A0x3536be6f6a9cdc4!2z4Lio4Li54LiZ4Lii4LmM4LiX4Lix4LiZ4LiV4LiB4Lij4Lij4Lih4oCLIOC4nuC4teKAi-C4lOC4teKAi-C4i-C4teKAiyBQREMgRGVudGFsIENlbnRlcg!5e0!3m2!1sen!2sth!4v1600207468543!5m2!1sen!2sth"
