--- a/index.html
+++ b/index.html
@@ -658,16 +658,16 @@
                 <h3 class="section-subheading-normal">คำถามที่พบบ่อย</h3>
             </div>
             <div class="accordion" id="accordionFAQ">
-                <!-- Q0-->
+                <!-- Q Covid-->
                 <div class="card toTheTop">
                     <div class="card-header" id="headingCovid">
                         <h5 class="mb-0">
-                            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#faq1" aria-expanded="true" aria-controls="service-xray">
+                            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#faq-covid" aria-expanded="true" aria-controls="service-xray">
                                 ทางคลินิกมีแนวทางการควบคุมและป้องกันกาพแพร่ระบาดของเชื้อ COVID-19 หรือไม่
                             </button>
                         </h5>
                     </div>
-                    <div id="faq1" class="collapse show" aria-labelledby="headingCovid" data-parent="#accordionFAQ">
+                    <div id="faq-covid" class="collapse show" aria-labelledby="headingCovid" data-parent="#accordionFAQ">
                         <div class="card-body">
                             <p>เรามีแนวทางการควบคุมและป้องกันการติดเชื้อ COVID-19 ดังนี้
                             </p>
@@ -706,6 +706,23 @@
                                     <li>ห้องน้ำและอ่างล้างมือ เช็ดทำความสะอาดทุก 30-60 นาที</li>
                                 </ul>
                             </ol>
+                        </div>
+                    </div>
+                </div>
+                <!-- Q0-->
+                <div class="card toTheTop">
+                    <div class="card-header" id="headingZero">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#faq0" aria-expanded="true" aria-controls="service-xray">
+                                ประกันสังคมต้องสำรองจ่ายหรือไม่ และใช้เอกสารอะไรบ้าง
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="faq0" class="collapse" aria-labelledby="headingZero" data-parent="#accordionFAQ">
+                        <div class="card-body">
+                            <p>สิทธิประกันสังคมเบิกค่าทันตกรรมทุกโรงพยาบาล สามารถใช้ได้ที่ศูนย์ทันตกรรม พิดีซี โดย
+                                <b>ไม่ต้องสำรองจ่าย 900 บาทต่อปี และใช้เพียงบัตรประชาชนใบเดียวเท่านั้น</b>
+                            </p>
                         </div>
                     </div>
                 </div>
