--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
                     <div class="card-header" id="headingCovid">
                         <h5 class="mb-0">
                             <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#faq-covid" aria-expanded="true" aria-controls="service-xray">
-                                ทางคลินิกมีแนวทางการควบคุมและป้องกันกาพแพร่ระบาดของเชื้อ COVID-19 หรือไม่
+                                ทางคลินิกมีแนวทางการควบคุมและป้องกันกาพแพร่ระบาดของเชื้อ COVID-19 หรือไม่?
                             </button>
                         </h5>
                     </div>
@@ -714,7 +714,7 @@
                     <div class="card-header" id="headingZero">
                         <h5 class="mb-0">
                             <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#faq0" aria-expanded="true" aria-controls="service-xray">
-                                ประกันสังคมต้องสำรองจ่ายหรือไม่ และใช้เอกสารอะไรบ้าง
+                                ประกันสังคมต้องสำรองจ่ายหรือไม่ และใช้เอกสารอะไรบ้าง?
                             </button>
                         </h5>
                     </div>
