Add promotion modal

--- a/index.html
+++ b/index.html
@@ -1373,7 +1373,7 @@
                                 </div>
                                 <!-- Close Button-->
                                 <div class="text-center">
-                                    <button class="btn btn-primary" data-dismiss="modal" type="button">
+                                    <button class="btn btn-dark" data-dismiss="modal" type="button">
                                         <i class="fas fa-times mr-1"></i>
                                         Close
                                     </button>
@@ -1566,7 +1566,7 @@
                                 </div>
                                 <!-- Close Button-->
                                 <div class="text-center">
-                                    <button class="btn btn-primary" data-dismiss="modal" type="button">
+                                    <button class="btn btn-dark" data-dismiss="modal" type="button">
                                         <i class="fas fa-times mr-1"></i>
                                         Close
                                     </button>
@@ -1692,7 +1692,7 @@
                                     <b>ควรใช้ไหมขัดฟันทำความสะอาดซอกฟันทุกซี่ทั้งฟันบนและฟันล่าง
                                         อย่างน้อยวันละครั้ง
                                         (หลังแปรงฟันก่อนนอน)</b></p>
-                                <button class=" btn btn-primary mt-5" data-dismiss="modal" type="button">
+                                <button class=" btn btn-dark mt-5" data-dismiss="modal" type="button">
                                     <i class="fas fa-times mr-1"></i>
                                     Close
                                 </button>
@@ -1769,7 +1769,7 @@
                                     <li>ปฏิบัติตามคำแนะนำของทันตแพทย์ในการรักษาอย่างเคร่งครัด</li>
                                     <li>ควรได้รับการขูดหินปูนทุกๆ 6 เดือน</li>
                                 </ul>
-                                <button class="btn btn-primary mt-5" data-dismiss="modal" type="button">
+                                <button class="btn btn-dark mt-5" data-dismiss="modal" type="button">
                                     <i class="fas fa-times mr-1"></i>
                                     Close
                                 </button>
@@ -1806,7 +1806,7 @@
                                     <li>การกำจัดปัจจัยเสี่ยง เช่น งดสูบบุหรี่ การรักษาและควบคุมโรคเบาหวาน เป็นต้น
                                     </li>
                                 </ul>
-                                <button class="btn btn-primary mt-5" data-dismiss="modal" type="button">
+                                <button class="btn btn-dark mt-5" data-dismiss="modal" type="button">
                                     <i class="fas fa-times mr-1"></i>
                                     Close
                                 </button>
@@ -1841,7 +1841,7 @@
                                 <p>การรักษาปกติใช้เวลาประมาณ 1-2 ครั้ง ฟันที่รักษาคลองรากฟันแล้วจะมีความเปราะมากกว่าฟันปกติ ทันตแพทย์จึงแนะนำให้ทำครอบฟันสวมทับฟันที่รักษาคลองรากฟันแล้ว เพื่อให้มีอายุการใช้งานที่นานขึ้น ไม่มีปัญหาแตกหักหรือร้าว ซึ่งหากรุนแรงอาจต้องถอนทิ้งในภายหลัง
                                     ในการรักษาฟันเด็ก ก็มีการรักษาคลองรากฟันในฟันน้ำนมด้วยเช่นกัน
                                 </p>
-                                <button class="btn btn-primary mt-5" data-dismiss="modal" type="button">
+                                <button class="btn btn-dark mt-5" data-dismiss="modal" type="button">
                                     <i class="fas fa-times mr-1"></i>
                                     Close
                                 </button>
@@ -1927,7 +1927,7 @@
                                     <li>ในกรณีที่ฟันเทียมตกหักเสียหาย ให้เก็บชิ้นส่วนทุกชิ้นให้ครบ จากนั้นนำไปให้ทันตแพทย์ซ่อมให้
                                     </li>
                                 </ul>
-                                <button class="btn btn-primary mt-5" data-dismiss="modal" type="button">
+                                <button class="btn btn-dark mt-5" data-dismiss="modal" type="button">
                                     <i class="fas fa-times mr-1"></i>
                                     Close
                                 </button>
@@ -1988,7 +1988,7 @@
                                 </p>
                                 <p>ในปัจจุบันการรักษาโดยใช้รากฟันเทียมเป็นไปอย่างแพร่หลาย และได้ผลสำเร็จมากขึ้นเรื่อยๆ รวมทั้งวิทยาการได้ก้าวหน้าไปมาก ทำให้ทันตกรรมรากฟันเทียมทำได้ง่าย และมีประสิทธิภาพมาก ยิ่งขึ้น ซึ่งเป็นประโยชน์อย่างมากกับคนไข้ที่สูญเสียฟันไป
                                 </p>
-                                <button class="btn btn-primary mt-5" data-dismiss="modal" type="button">
+                                <button class="btn btn-dark mt-5" data-dismiss="modal" type="button">
                                     <i class="fas fa-times mr-1"></i>
                                     Close
                                 </button>
@@ -2030,7 +2030,7 @@
                                 <p>การบรูณะฟันโดยใช้คอมโพสิตเรซิน ซึ่งเป็นวัสดุอุดฟันที่มีสีเหมือนฟัน มาใช้ในการอุดฟันหน้าและฟันหลัง ใช้บูรณะฟันที่มีรอยผุ, ทดแทนเนื้อฟันที่หายไปบางส่วน หรือการสึกของคอฟัน นอกจากนี้อาจใช้ในการเปลี่ยนจากวัสดุอุดที่มีสีตะกั่วให้เป็นสีเหมือนฟันเพื่อความสวยงาม
                                     และยังสามารถใช้ในการปิดช่องว่างระหว่างฟันหน้าที่ห่างกันด้วย
                                 </p>
-                                <button class="btn btn-primary mt-5" data-dismiss="modal" type="button">
+                                <button class="btn btn-dark mt-5" data-dismiss="modal" type="button">
                                     <i class="fas fa-times mr-1"></i>
                                     Close
                                 </button>
@@ -2081,7 +2081,7 @@
                                 <p>ความคงทนของการฟอกสีฟัน ขึ้นอยู่กับการรับประทานอาหารหลังจากฟอกสีฟัน ถ้ากลับไปรับประทานอาหาร หรือเครื่องดื่มที่มีสี ก็จะมีโอกาสที่ฟันจะเปลี่ยนสีเข้มขึ้นอย่างช้าๆ ผลการวิจัยพบว่าใช้เวลาประมาณ 3–5 ปี แต่สีของฟันที่ฟอกแล้ว จะไม่กลับไปสู่ระดับเริ่มต้น
                                     ซึ่งก็สามารถทำการฟอกสีฟันซ้ำได้อีกในอนาคต
                                 </p>
-                                <button class="btn btn-primary mt-5" data-dismiss="modal" type="button">
+                                <button class="btn btn-dark mt-5" data-dismiss="modal" type="button">
                                     <i class="fas fa-times mr-1"></i>
                                     Close
                                 </button>
@@ -2116,7 +2116,7 @@
                                 <p>แนะนำให้ถอนออกแม้ว่าจะไม่มีอาการเจ็บปวด บางครั้งอาจมีความจำเป็นที่จะต้องผ่าตัดเหงือกร่วมกับการกรอกระดูกบ้าง หรือที่เรียกว่า “ผ่าฟันคุด” เป็นการผ่าตัดเล็ก ใช้แค่ฉีดยาชาเฉพาะที่เท่านั้น แนะนำให้ถอนฟันคุดในช่วงอายุน้อยๆ เพราะแผลจะหายได้เร็วกว่าเมื่อสูงอายุ
                                     และผลข้างเคียงที่เกิดขึ้นจะน้อยกว่า
                                 </p>
-                                <button class="btn btn-primary mt-5" data-dismiss="modal" type="button">
+                                <button class="btn btn-dark mt-5" data-dismiss="modal" type="button">
                                     <i class="fas fa-times mr-1"></i>
                                     Close
                                 </button>
@@ -2165,7 +2165,34 @@
                                         </ul>
                                     </li>
                                 </ul>
-                                <button class="btn btn-primary mt-5" data-dismiss="modal" type="button">
+                                <button class="btn btn-dark mt-5" data-dismiss="modal" type="button">
+                                    <i class="fas fa-times mr-1"></i>
+                                    Close
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Promotion Modal-->
+    <div class="portfolio-modal modal fade" id="promotion-modal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" />
+                </div>
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-12">
+                            <div class="modal-body">
+                                <!-- Project Details Go Here-->
+                                <h2 class="text-uppercase mb-5">PROMOTION</h2>
+                                <img class="img-fluid d-block mx-auto" src="promotion/1.png" alt="Promotion 1" />
+                                <img class="img-fluid d-block mx-auto" src="promotion/2.png" alt="Promotion 2" />
+                                <img class="img-fluid d-block mx-auto" src="promotion/3.png" alt="Promotion 3" />
+                                <button class="btn btn-dark mt-5" data-dismiss="modal" type="button">
                                     <i class="fas fa-times mr-1"></i>
                                     Close
                                 </button>
