--- a/index.html
+++ b/index.html
@@ -2180,21 +2180,23 @@
     <!-- Promotion Modal-->
     <div class="portfolio-modal modal fade" id="promotion-modal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" />
-                </div>
+            <div class="modal-content promotion-modal-content">
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-lg-12">
-                            <div class="modal-body">
+                            <div class="modal-body promotion-modal-body">
                                 <!-- Project Details Go Here-->
-                                <h2 class="text-uppercase mb-5">PROMOTION</h2>
                                 <img class="img-fluid d-block mx-auto" src="promotion/1.png" alt="Promotion 1" />
                                 <img class="img-fluid d-block mx-auto" src="promotion/2.png" alt="Promotion 2" />
                                 <img class="img-fluid d-block mx-auto" src="promotion/3.png" alt="Promotion 3" />
-                                <button class="btn btn-dark mt-5" data-dismiss="modal" type="button">
-                                    <i class="fas fa-times mr-1"></i>
-                                    Close
+                                <div class="mb-3">
+                                    <a class="semi-small-box-shadow btn btn-dark btn-social mx-2" href="tel:6629527475" target="_blank"><i class="fas fa-phone"></i></a>
+                                    <a class="semi-small-box-shadow btn btn-dark btn-social mx-2" href="tel:66863456312" target="_blank"><i class="fas fa-mobile-alt"></i></a>
+                                    <a class="semi-small-box-shadow btn btn-dark btn-social mx-2" href="http://m.me/pdcdentalcenter" target="_blank"><i
+                                            class="fab fa-facebook-messenger"></i></a>
+                                </div>
+                                <button class="btn btn-primary" data-dismiss="modal" type="button">
+                                    Go to the website
                                 </button>
                             </div>
                         </div>
