Edit promo images

--- a/index.html
+++ b/index.html
@@ -2186,9 +2186,9 @@
                         <div class="col-lg-12">
                             <div class="modal-body promotion-modal-body">
                                 <!-- Project Details Go Here-->
-                                <img class="img-fluid d-block mx-auto" src="promotion/1.png" alt="Promotion 1" />
-                                <img class="img-fluid d-block mx-auto" src="promotion/2.png" alt="Promotion 2" />
-                                <img class="img-fluid d-block mx-auto" src="promotion/3.png" alt="Promotion 3" />
+                                <img class="img-fluid d-block mx-auto" src="assets/promotion/1.png" alt="Promotion 1" />
+                                <img class="img-fluid d-block mx-auto" src="assets/promotion/2.png" alt="Promotion 2" />
+                                <img class="img-fluid d-block mx-auto" src="assets/promotion/3.png" alt="Promotion 3" />
                                 <div class="mb-3">
                                     <a class="semi-small-box-shadow btn btn-dark btn-social mx-2" href="tel:6629527475" target="_blank"><i class="fas fa-phone"></i></a>
                                     <a class="semi-small-box-shadow btn btn-dark btn-social mx-2" href="tel:66863456312" target="_blank"><i class="fas fa-mobile-alt"></i></a>
