Remove promo modal

--- a/index.html
+++ b/index.html
@@ -2179,7 +2179,7 @@
     </div>
 
     <!-- Promotion Modal-->
-    <div class="portfolio-modal modal fade" id="promotion-modal" tabindex="-1" role="dialog" aria-hidden="true">
+    <!-- <div class="portfolio-modal modal fade" id="promotion-modal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content promotion-modal-content">
                 <div class="container">
@@ -2205,7 +2205,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Bootstrap core JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
