Remove Bangna info in Experience section

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                     <h4 class="about-button-subheading mt-0 mb-3 text-muted">Experience</h4>
                     <div class="collapse" id="long-experience">
                         <div class="card card-body pt-0"></div>
-                        <p class="text-muted">ศูนย์ทันตกรรม พีดีซี จัดตั้งขึ้นจากการรวมกลุ่มทันตแพทย์ที่มีประสบการณ์ทั้งในด้านการรักษาและการจัดการ ปัจจุบันศูนย์ทันตกรรม พีดีซี เปิดดำเนินการ 2 สาขา คือ สาขางามวงศ์วาน และ สาขาบางนา ตั้งแต่ปี พ.ศ. 2535 และ 2537 ตามลำดับ
+                        <p class="text-muted">ศูนย์ทันตกรรม พีดีซี จัดตั้งขึ้นจากการรวมกลุ่มทันตแพทย์ที่มีประสบการณ์ทั้งในด้านการรักษาและการจัดการ ปัจจุบันศูนย์ทันตกรรม พีดีซี เปิดดำเนินการตั้งแต่ปี พ.ศ. 2535
                         </p>
-                        <p class="text-muted">PDC Dental Center was founded by a group of experienced dentists in both treatment and management. Currently, we have 2 branches - Ngamwongwan and Bangna branches - which were established in 1992 and 1994, respectively.
+                        <p class="text-muted">PDC Dental Center was founded in 1992 by a group of experienced dentists in both treatment and management.
                         </p>
                     </div>
                 </div>
