Remove branch name

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">ทันตแพทย์สาขางามวงศ์วาน</div>
-                                <div class="portfolio-caption-subheading text-muted">Ngamwongwan Branch Team</div>
+                                <!-- <div class="portfolio-caption-heading">รายชื่อทันตแพทย์ของเรา</div> -->
+                                <div class="portfolio-caption-subheading text-muted">Click to meet our team</div>
                             </div>
                         </a>
                     </div>
@@ -950,16 +950,16 @@
                     ปรึกษาปัญหาเรื่องฟันและนัดหมายกับทันตแพทย์เฉพาะทางฟรี <br> Contact us for a free consultation and to make an appointment
                 </h4>
             </div>
-            <div class="row pt-2">
+            <div class="row">
                 <div class="col-lg-6 text-center">
-                    <h5>ศูนย์ทันตกรรม พีดีซี สาขางามวงศ์วาน</h5>
+                    <!-- <h5>ศูนย์ทันตกรรม พีดีซี สาขางามวงศ์วาน</h5> -->
                     <p class="text-muted">บริษัท โปรเฟสชั่นแนล เดนตัล เซ็นเตอร์ จำกัด<br> 425 อาคารพาณิชย์ ตรงข้ามเดอะมอลล์
                         <br> ถ.งามวงศ์วาน ต.บางเขน อ.เมือง จ.นนทบุรี 11000<br> โทร : (66) 2952 7475-6, (668) 1684 9616, (668) 6327 2887
                         <br> โทรสาร : (66) 2952 7476<br> เวลาทำการ : จ.-อา. 10.00-20.00 น.<br>
                     </p>
                 </div>
                 <div class="col-lg-6 text-center">
-                    <h5>PDC Dental Center, Ngamwongwan Branch</h5>
+                    <!-- <h5>PDC Dental Center, Ngamwongwan Branch</h5> -->
                     <p class="text-muted">Professional Dental Center Company Limited<br> 425 Ngamwongwan Road,<br> Bangkaen, Muang District, Nonthaburi 11000<br> Tel : (66) 2952 7475-6, (668) 1684 9616, (668) 6327 2887
                         <br> Fax : (66) 2952 7476
                         <br> Office Hour : Mon.-Sun. 10.00 am.-8.00 pm.<br>
