Remove branch name

--- a/index.html
+++ b/index.html
@@ -999,8 +999,8 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-10 text-left">
                             <div class="modal-body">
-                                <h2 class="text-uppercase text-center">ทันตแพทย์สาขางามวงศ์วาน</h2>
-                                <p class="item-intro text-muted text-center mb-5">Ngamwongwan Branch Team</p>
+                                <!-- <h2 class="text-uppercase text-center">ทันตแพทย์สาขางามวงศ์วาน</h2>
+                                <p class="item-intro text-muted text-center mb-5">Ngamwongwan Branch Team</p> -->
                                 <!-- General-->
                                 <div class="dentist-group">
                                     <h5 class="mb-4">ทันตกรรมทั่วไป, ทันตกรรมบูรณะ & ทันตกรรมตกแต่ง <br>(General Dentistry, Operative & Esthetic Dentistry)</h5>
