--- a/index.html
+++ b/index.html
@@ -143,30 +143,30 @@
                             </div>
                             <div class="row mb-4">
                                 <div class="dentist col-lg-6">
-                                    <p>ทพญ.พิมพ์พิศา รังษีวงศ์</p>
+                                    <p>ทพญ.พัณณกัลย์ รังษีวงศ์</p>
                                     <p class="text-muted">ทันตแพทยศาสตร์บัณฑิต, มหาวิทยาลัยมหิดล</p>
                                     <p class="text-muted">
                                         ประกาศนียบัตรบัณฑิตชั้นสูงทางวิทยาศาสตร์การแพทย์คลินิก สาขาวิชาทันตกรรมประดิษฐ์
                                     </p>
                                 </div>
                                 <div class="dentist col-lg-6">
-                                    <p>Pimpisa Rangsriwong</p>
+                                    <p>Phannakan Rangsriwong</p>
                                     <p class="text-muted">D.D.S., Mahidol University</p>
                                     <p class="text-muted">Higher Graduate Diploma in Clinical Sciences Degree Field of Study Prosthodontics</p>
                                 </div>
                             </div>
                             <div class="row mb-4">
                                 <div class="dentist col-lg-6">
-                                    <p>ทพญ.วริษา ประเสริฐนุกูลผล</p>
+                                    <p>ทพญ.พิมพ์นิดา โภคินชัชนันท์</p>
                                     <p class="text-muted">ทันตแพทยศาสตร์บัณฑิต, มหาวิทยาลัยมหิดล</p>
-                                    <p class="text-muted">ประกาศนียบัตรบัณฑิต สาขาวิทยาเอ็นโดดอนต์, มหาวิทยาลัยมหิดล
-                                    </p>
+                                    <p class="text-muted">วิทยาศาสตรมหาบัณฑิต สาขาทันตแพทย์ศาสตร์ (หลักสูตรนานาชาติ) วิชาเอกทันตกรรมประดิษฐ์</p>
+                                    <p class="text-muted">ประกาศนียบัตรทันตกรรมรากฟันเทียม สมาคมทันตแพทย์เอกชนแห่งประเทศไทย (PDAT) ร่วมกับสมาคมทันตกรรมรากเทียมประเทศเยอรมนี (DGOI)</p>
                                 </div>
                                 <div class="dentist col-lg-6">
-                                    <p>Warisa Prasertnukulphon</p>
+                                    <p>Pimnida Phokhinachatchanan</p>
                                     <p class="text-muted">D.D.S., Mahidol University</p>
-                                    <p class="text-muted">Graduate Diploma in Clinical Science (Endodontics), Mahidol University
-                                    </p>
+                                    <p class="text-muted">Master of Science, Programme in Dentistry (International Programme)</p>
+                                    <p class="text-muted">Certificated in Thai-German Basic Implantology Course (TG-BIC)</p>
                                 </div>
                             </div>
                             <div class="row mb-4">
@@ -255,20 +255,6 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="row mb-4">
-                                <div class="dentist col-lg-6">
-                                    <p>ทพญ.วริษา ประเสริฐนุกูลผล</p>
-                                    <p class="text-muted">ทันตแพทยศาสตร์บัณฑิต, มหาวิทยาลัยมหิดล</p>
-                                    <p class="text-muted">ประกาศนียบัตรบัณฑิต สาขาวิทยาเอ็นโดดอนต์, มหาวิทยาลัยมหิดล
-                                    </p>
-                                </div>
-                                <div class="dentist col-lg-6">
-                                    <p>Warisa Prasertnukulphon</p>
-                                    <p class="text-muted">D.D.S., Mahidol University</p>
-                                    <p class="text-muted">Graduate Diploma in Clinical Science (Endodontics), Mahidol University
-                                    </p>
-                                </div>
-                            </div>
                         </div>
                         <!-- Implant-->
                         <div class="dentist-group">
@@ -302,15 +288,29 @@
                             </div>
                             <div class="row mb-4">
                                 <div class="dentist col-lg-6">
-                                    <p>ทพญ.พิมพ์พิศา รังษีวงศ์</p>
+                                    <p>ทพญ.พัณณกัลย์ รังษีวงศ์</p>
                                     <p class="text-muted">ทันตแพทยศาสตร์บัณฑิต, มหาวิทยาลัยมหิดล </p>
                                     <p class="text-muted">ประกาศนียบัตรบัณฑิตชั้นสูงทางวิทยาศาสตร์การแพทย์คลินิก สาขาวิชาทันตกรรมประดิษฐ์
                                     </p>
                                 </div>
                                 <div class="dentist col-lg-6">
-                                    <p>Pimpisa Rangsriwong</p>
+                                    <p>Phannakan Rangsriwong</p>
                                     <p class="text-muted">D.D.S., Mahidol University</p>
                                     <p class="text-muted">Higher Graduate Diploma in Clinical Sciences Degree Field of Study Prosthodontics</p>
+                                </div>
+                            </div>
+                            <div class="row mb-4">
+                                <div class="dentist col-lg-6">
+                                    <p>ทพญ.พิมพ์นิดา โภคินชัชนันท์</p>
+                                    <p class="text-muted">ทันตแพทยศาสตร์บัณฑิต, มหาวิทยาลัยมหิดล</p>
+                                    <p class="text-muted">วิทยาศาสตรมหาบัณฑิต สาขาทันตแพทย์ศาสตร์ (หลักสูตรนานาชาติ) วิชาเอกทันตกรรมประดิษฐ์</p>
+                                    <p class="text-muted">ประกาศนียบัตรทันตกรรมรากฟันเทียม สมาคมทันตแพทย์เอกชนแห่งประเทศไทย (PDAT) ร่วมกับสมาคมทันตกรรมรากเทียมประเทศเยอรมนี (DGOI)</p>
+                                </div>
+                                <div class="dentist col-lg-6">
+                                    <p>Pimnida Phokhinachatchanan</p>
+                                    <p class="text-muted">D.D.S., Mahidol University</p>
+                                    <p class="text-muted">Master of Science, Programme in Dentistry (International Programme)</p>
+                                    <p class="text-muted">Certificated in Thai-German Basic Implantology Course (TG-BIC)</p>
                                 </div>
                             </div>
                             <div class="row mb-4">
@@ -515,27 +515,23 @@
                                 <tbody>
                                     <tr>
                                         <th scope="row">อุดฟันด้วยอมัลกัม 1 ด้าน</th>
-                                        <td>600 - 800฿</td>
+                                        <td>800 - 1,000฿</td>
                                     </tr>
                                     <tr>
                                         <th scope="row">อุดฟันด้วยวัสดุสีเหมือนฟัน 1 ด้าน</th>
-                                        <td>800 - 1,000฿</td>
+                                        <td>950 - 1,300฿</td>
                                     </tr>
                                     <tr>
                                         <th scope="row">ชุดฟอกสีฟันที่บ้าน (Home Bleaching)</th>
                                         <td>4,500฿</td>
                                     </tr>
                                     <tr>
-                                        <th scope="row">ฟอกสีฟันทั้งปากด้วย Beyond (Cold Light)</th>
+                                        <th scope="row">ฟอกสีฟันทั้งปาก (Cold Light)</th>
                                         <td>9,000฿</td>
                                     </tr>
                                     <tr>
-                                        <th scope="row">ฟอกสีฟันทั้งปากด้วย Beyond 2 ท่าน</th>
-                                        <td>15,000฿</td>
-                                    </tr>
-                                    <tr>
                                         <th scope="row">ปิดช่องว่างระหว่างฟัน (Diastema)</th>
-                                        <td>1,800 - 2,000฿</td>
+                                        <td>1,800 - 2,500฿</td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -561,11 +557,11 @@
                                 <tbody>
                                     <tr>
                                         <th scope="row">ถอนฟันน้ำนม</th>
-                                        <td>450 - 500฿</td>
+                                        <td>600฿</td>
                                     </tr>
                                     <tr>
                                         <th scope="row">ขัดฟันและเคลือบฟลูออไรด์</th>
-                                        <td>600 - 800฿</td>
+                                        <td>600 - 900฿</td>
                                     </tr>
                                     <tr>
                                         <th scope="row">เคลือบร่องฟันป้องกันฟันผุ (Sealant)</th>
@@ -595,11 +591,11 @@
                                 <tbody>
                                     <tr>
                                         <th scope="row">รักษาคลองรากฟันหน้า</th>
-                                        <td>4,000 - 5,000฿</td>
+                                        <td>7,000฿</td>
                                     </tr>
                                     <tr>
                                         <th scope="row">รักษาคลองรากฟันกรามใหญ่</th>
-                                        <td>8,000 - 12,000฿</td>
+                                        <td>12,000 - 14,000฿</td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -639,22 +635,22 @@
                                     <tr>
                                         <th scope="row" style="padding-left: 50px;">เซรามิกกับโลหะธรรมดา (Non-Precious Metal)
                                         </th>
-                                        <td>9,000 - 10,000฿</td>
+                                        <td>10,000 - 11,000฿</td>
                                     </tr>
                                     <tr>
                                         <th scope="row" style="padding-left: 50px;">เซรามิกกับโลหะผสมทอง > 2% (Palladium Base)
                                         </th>
-                                        <td>14,000 - 16,000฿</td>
+                                        <td>16,000 - 18,000฿</td>
                                     </tr>
                                     <tr>
                                         <th scope="row" style="padding-left: 50px;">เซรามิกกับโลหะผสมทอง > 85% (Precious Metal)
                                         </th>
-                                        <td>20,000 - 22,000฿</td>
+                                        <td>22,000 - 25,000฿</td>
                                     </tr>
                                     <tr>
                                         <th scope="row" style="padding-left: 50px;">เซรามิกทั้งชิ้น (All Ceramic)
                                         </th>
-                                        <td>15,000 - 18,000฿</td>
+                                        <td>18,000฿</td>
                                     </tr>
                                     <tr>
                                         <th scope="row">เคลือบผิวฟันด้วยวัสดุสีเหมือนฟัน (Resin)</th>
@@ -662,7 +658,7 @@
                                     </tr>
                                     <tr>
                                         <th scope="row">เคลือบผิวฟันด้วยวัสดุเซรามิก (Porcelain Veneer)</th>
-                                        <td>9,000 - 12,000฿</td>
+                                        <td>12,000 - 14,000฿</td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -688,11 +684,11 @@
                                 <tbody>
                                     <tr>
                                         <th scope="row">รากฟันเทียม Astra Tech</th>
-                                        <td>60,000 - 68,000฿</td>
+                                        <td>68,000฿</td>
                                     </tr>
                                     <tr>
                                         <th scope="row">รากฟันเทียม Osstem</th>
-                                        <td>49,000 - 60,000฿</td>
+                                        <td>42,000 - 45,000฿</td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -718,15 +714,15 @@
                                 <tbody>
                                     <tr>
                                         <th scope="row">ถอนฟันธรรมดา (Extraction)</th>
-                                        <td>800 - 1,000฿</td>
+                                        <td>800 - 1,500฿</td>
                                     </tr>
                                     <tr>
                                         <th scope="row">ผ่าฟันคุด (Impacted Tooth)</th>
-                                        <td>3,500 - 5,500฿</td>
+                                        <td>4,000 - 6,000฿</td>
                                     </tr>
                                     <tr>
                                         <th scope="row">ขูดหินปูนและทำความสะอาด (Scaling & Polishing)</th>
-                                        <td>800 - 1,000฿</td>
+                                        <td>950 - 1,500฿</td>
                                     </tr>
                                     <tr>
                                         <th scope="row">พ่นขัดคราบผิวเคลือบฟัน (Air-Flow)</th>
@@ -798,11 +794,11 @@
                                     </tr>
                                     <tr>
                                         <th scope="row">ภาพถ่ายรังสี Orthopantomogram</th>
-                                        <td>500฿</td>
+                                        <td>550฿</td>
                                     </tr>
                                     <tr>
                                         <th scope="row">ภาพถ่ายรังสี Lateral Cephalogram</th>
-                                        <td>500฿</td>
+                                        <td>550฿</td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -1369,14 +1365,14 @@
                                     </div>
                                     <div class="row mb-4">
                                         <div class="dentist col-lg-6">
-                                            <p>ทพญ.พิมพ์พิศา รังษีวงศ์</p>
+                                            <p>ทพญ.พัณณกัลย์ รังษีวงศ์</p>
                                             <p class="text-muted">ทันตแพทยศาสตร์บัณฑิต, มหาวิทยาลัยมหิดล</p>
                                             <p class="text-muted">
                                                 ประกาศนียบัตรบัณฑิตชั้นสูงทางวิทยาศาสตร์การแพทย์คลินิก สาขาวิชาทันตกรรมประดิษฐ์
                                             </p>
                                         </div>
                                         <div class="dentist col-lg-6">
-                                            <p>Pimpisa Rangsriwong</p>
+                                            <p>Phannakan Rangsriwong</p>
                                             <p class="text-muted">D.D.S., Mahidol University</p>
                                             <p class="text-muted">Higher Graduate Diploma in Clinical Sciences Degree Field of Study Prosthodontics</p>
                                         </div>
@@ -1520,13 +1516,13 @@
                                     </div>
                                     <div class="row mb-4">
                                         <div class="dentist col-lg-6">
-                                            <p>ทพญ.พิมพ์พิศา รังษีวงศ์</p>
+                                            <p>ทพญ.พัณณกัลย์ รังษีวงศ์</p>
                                             <p class="text-muted">ทันตแพทยศาสตร์บัณฑิต, มหาวิทยาลัยมหิดล </p>
                                             <p class="text-muted">ประกาศนียบัตรบัณฑิตชั้นสูงทางวิทยาศาสตร์การแพทย์คลินิก สาขาวิชาทันตกรรมประดิษฐ์
                                             </p>
                                         </div>
                                         <div class="dentist col-lg-6">
-                                            <p>Pimpisa Rangsriwong</p>
+                                            <p>Phannakan Rangsriwong</p>
                                             <p class="text-muted">D.D.S., Mahidol University</p>
                                             <p class="text-muted">Higher Graduate Diploma in Clinical Sciences Degree Field of Study Prosthodontics</p>
                                         </div>
