--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                                     <p class="text-muted">ประกาศนียบัตรทันตกรรมรากฟันเทียม สมาคมทันตแพทย์เอกชนแห่งประเทศไทย (PDAT) ร่วมกับสมาคมทันตกรรมรากเทียมประเทศเยอรมนี (DGOI)</p>
                                 </div>
                                 <div class="dentist col-lg-6">
-                                    <p>Pimnida Phokhinachatchanan</p>
+                                    <p>Pimnida Phokhinchatchanan</p>
                                     <p class="text-muted">D.D.S., Mahidol University</p>
                                     <p class="text-muted">Master of Science, Programme in Dentistry (International Programme)</p>
                                     <p class="text-muted">Certificated in Thai-German Basic Implantology Course (TG-BIC)</p>
@@ -307,7 +307,7 @@
                                     <p class="text-muted">ประกาศนียบัตรทันตกรรมรากฟันเทียม สมาคมทันตแพทย์เอกชนแห่งประเทศไทย (PDAT) ร่วมกับสมาคมทันตกรรมรากเทียมประเทศเยอรมนี (DGOI)</p>
                                 </div>
                                 <div class="dentist col-lg-6">
-                                    <p>Pimnida Phokhinachatchanan</p>
+                                    <p>Pimnida Phokhinchatchanan</p>
                                     <p class="text-muted">D.D.S., Mahidol University</p>
                                     <p class="text-muted">Master of Science, Programme in Dentistry (International Programme)</p>
                                     <p class="text-muted">Certificated in Thai-German Basic Implantology Course (TG-BIC)</p>
@@ -683,7 +683,7 @@
                                 </colgroup>
                                 <tbody>
                                     <tr>
-                                        <th scope="row">รากฟันเทียม Astra Tech</th>
+                                        <th scope="row">รากฟันเทียม Straumann</th>
                                         <td>68,000฿</td>
                                     </tr>
                                     <tr>
